--- a/Polynomial Regression/Polynomial Regression.ipynb
+++ b/Polynomial Regression/Polynomial Regression.ipynb
@@ -203,7 +203,8 @@
    },
    "outputs": [],
    "source": [
-    "#Preiction with Polynomial Regression did accurate preiction as compared to Linear Regression model"
+    "#Preiction with Polynomial Regression did accurate preiction as compared to Linear Regression model\n",
+    "#Employee is not lying as per the above polynomial regression result."
    ]
   }
  ],
