--- a/K-Nearest Neighbors (K-NN)/K-Nearest Neighbors (K-NN).ipynb
+++ b/K-Nearest Neighbors (K-NN)/K-Nearest Neighbors (K-NN).ipynb
@@ -182,7 +182,7 @@
     "for i, j in enumerate(np.unique(y_set)):\n",
     "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1],\n",
     "                c = ListedColormap(('red', 'green'))(i), label = j)\n",
-    "plt.title('Logistic Regression (Training set)')\n",
+    "plt.title('KNN (Training set)')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
@@ -220,7 +220,7 @@
     "for i, j in enumerate(np.unique(y_set)):\n",
     "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1],\n",
     "                c = ListedColormap(('red', 'green'))(i), label = j)\n",
-    "plt.title('Logistic Regression (Training set)')\n",
+    "plt.title('KNN (Testing set)')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
