--- a/Logistic Regression/Logistic Regression.ipynb
+++ b/Logistic Regression/Logistic Regression.ipynb
@@ -221,7 +221,7 @@
     "for i, j in enumerate(np.unique(y_set)):\n",
     "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1],\n",
     "                c = ListedColormap(('red', 'green'))(i), label = j)\n",
-    "plt.title('Logistic Regression (Training set)')\n",
+    "plt.title('Logistic Regression (Testing set)')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Estimated Salary')\n",
     "plt.legend()\n",
