--- a/Reinforcement Learning/Upper Confidence Bound/Upper Confidence Bound.ipynb
+++ b/Reinforcement Learning/Upper Confidence Bound/Upper Confidence Bound.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "#Implementing random selection for comparison purpose later on \n",
+    "#Implementing UCB algorithm from scratch\n",
     "import math\n",
     "users = len(dataset)\n",
     "ads = 10\n",
@@ -138,6 +138,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
